# printer-pdf

./: CMakeLists.txt  main.cpp
PPD/: Kyocera_PA2001.ppd  Kyocera_PA2001_EU.ppd  Kyocera_PA2001w_EU.ppd
